# Virtual-Microphone

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  virtual-microphone-restart.ps1  virtual-microphone.ini.example
.github/workflows/: release-latest.yml
src/: main.cpp  vst2_host.cpp  vst2_host.h
